--- a/jamarGiphy.html
+++ b/jamarGiphy.html
@@ -3,12 +3,16 @@
 <head>
     <title>Music Legends</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> 
-     <link rel="stylesheet" href="https://bootswatch.com/cyborg/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
+<div class= "container-fluid">
 <h1> Click on a button to see some of my favorite music artist gifs!</h1>
 
     <div id="buttonsView"></div>
@@ -20,7 +24,7 @@
           <input type="text" class="form-control" id="gif-input" placeholder="Enter text here..."> 
         </div>
     
-        <button type="submit" class="btn btn-danger" id = "searchButton">Submit</button>
+        <button type="submit" col-xs-4="row" class="btn btn-danger" id = "searchButton">Submit</button>
 
         <p></p>
 
@@ -29,12 +33,12 @@
       
     </div>
 
-
-    <div class="col-md-3" id ="maincontent">
-    <div id="gifDisplay"> 
+    <div class="row">
+    <div class="col-md-12" id ="maincontent">
+    <div id="gifDisplay"></div>
     </div>
     </div>
-<script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+</div>
 <script type= "text/javascript" src="assets/javascript/giphy.js"</script>
 <script type= "text/javascript" src="assets/javascript/giphy.js"</script>
 </body>
